New changes to index.html

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background-color: #6A0DAD; /* Dark purple */
-            color: white; /* High contrast */
-            border: 2px solid white; /* Adds definition */
+            background-color: #6A0DAD; 
+            color: white; 
+            border: 2px solid white; 
             border-radius: 50%;
             width: 60px;
             height: 60px;
@@ -23,12 +23,12 @@
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); /* Slight shadow for depth */
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); 
             transition: background-color 0.3s ease;
         }
 
         #chatToggleBtn:hover {
-            background-color: #8A2BE2; /* Lighter purple on hover */
+            background-color: #8A2BE2; 
         }
 
         /* Chat Container Styling */
@@ -65,7 +65,7 @@
         #face-recognition-container {
             text-align: center;
             margin-top: 20px;
-            margin-bottom: 30px; /* Adds space below the face recognition section */
+            margin-bottom: 30px; 
         }
 
         #video {
@@ -93,7 +93,7 @@
 
     <main>
 
-        <!-- Face Recognition Section (Moved here) -->
+        <!-- Face Recognition Section  -->
         <section id="face-recognition-container">
             <h2>Face Recognition</h2>
             <div id="consentMessage" style="display:none;">
